Añade variables globales CSS, crea e indexa inicio.css a index.html

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,8 @@
 
 html {
     font-size: 62.5%; /* ESTA REGLA ESTABLECE 1rem = 10 px*/
+    scroll-behavior: smooth;
+    font-family: 'Lato', sans-serif;
 }
 
 p {
@@ -17,6 +19,17 @@ p {
 /*  ----------- FIN DE RESETS -----------  */
 
 :root {
+    /* Colores: (no abusar de los turquesas, son para detalles)*/
     --turquesa-opaco: #00ADB5;
     --turquesa-intenso: #00FFF5;
+    --oscuro: #222831;
+    --gris-oscuro: #393E46;
+    --gris-claro: #BDBDBD;
+    --texto: #212121;
+    --texto-secundario: #757575;
+
+    /* Fuentes: */
+    --font-lato: 'Lato', sans-serif;
+    --title-pacifico: 'Pacifico', cursive;
+    --title-playfair: 'Playfair Display', serif;
 }
