--- a/styles/style.css
+++ b/styles/style.css
@@ -33,3 +33,71 @@ p {
     --title-pacifico: 'Pacifico', cursive;
     --title-playfair: 'Playfair Display', serif;
 }
+
+/*----------------- NAV ------------------*/
+
+img {
+    max-width: 100%;
+}
+
+.toggle-menu {
+    position: absolute;
+    top: 0.5rem;
+    right: 1.5rem;
+    cursor: pointer;
+    filter: invert(1);
+    width: 40px;
+    z-index: 1;
+    align-items: end;
+}
+
+.main-menu {
+    list-style: none;
+    margin-top: 0;
+    margin-bottom: 0;
+
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #85D8DC;
+    transition: transform 0.3s;
+    transform: translateY(-100%);
+}
+
+.main-menu--show {
+    transform: translateY(0);
+}
+
+.toggle-menu__checkbox {
+    display: none;
+}
+
+.toggle-menu__checkbox:checked+.main-menu {
+    transform: translateY(0);
+}
+
+@media screen and (min-width: 768px) {
+    .main-menu {
+        flex-direction: row;
+        justify-content: end;
+        padding: 10px;
+        transform: translateY(0);
+    }
+
+    .toggle-menu {
+        display: none;
+    }
+}
+
+.main-menu__item {
+    padding: 0.5rem;
+}
+
+.main-menu__link {
+    color: #222831;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+/*---------------- FIN NAV ----------------*/
