--- a/styles/style.css
+++ b/styles/style.css
@@ -51,18 +51,37 @@ img {
     align-items: end;
 }
 
+.main-menu-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo {
+    padding: 8px;
+}
+
+.logo-img {
+    width: 60px;
+    height: 60px;
+}
+
 .main-menu {
     list-style: none;
     margin-top: 0;
     margin-bottom: 0;
-
-
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #85D8DC;
     transition: transform 0.3s;
     transform: translateY(-100%);
+    font-size: 1.6rem;
+    padding:2rem;
+    justify-content: space-between;
+}
+
+.main-menu__links-container {
+    text-align: center;
 }
 
 .main-menu--show {
@@ -80,9 +99,16 @@ img {
 @media screen and (min-width: 768px) {
     .main-menu {
         flex-direction: row;
-        justify-content: end;
-        padding: 10px;
+        justify-content: space-between; 
+        padding: 2rem;
         transform: translateY(0);
+    }
+
+    .main-menu__links-container {
+        display: flex;
+        gap: 8px;
+        flex-direction: row;
+        justify-content: space-between; 
     }
 
     .toggle-menu {
