--- a/styles/inicio.css
+++ b/styles/inicio.css
@@ -162,6 +162,13 @@
     transition: 0s;
 }
 
+.scrolling-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 16px;
+}
+
 .mouse-container {
     display: flex;
     justify-content: center;
@@ -202,6 +209,14 @@
     }
 }
 
+.scrolling-caption {
+    color: var(--texto-secundario);
+    font-size: 1.5rem;
+    position: relative;
+    top: -11px;
+    font-style: italic;
+}
+
 
 /* SEGUNDA SECCIÓN: ABOUT */
 .about {
@@ -239,6 +254,10 @@
     flex-wrap: wrap;
     gap: 20px 40px;
     opacity: 65%;
+    margin: 35px 0;
+    padding: 30px 0;
+    border-top: 2px solid var(--gris-claro);
+    border-bottom: 2px solid var(--gris-claro);
 }
 
 .about__sponsor {
@@ -290,7 +309,7 @@
         padding: 6rem 3.2rem;
     }
 
-    .mouse-container {
+    .scrolling-container {
         display: none;
     }
 
