Añade hrefs de nav y footer, padding a footer y animación subrayado <a>

--- a/styles/style.css
+++ b/styles/style.css
@@ -130,6 +130,15 @@ img {
     color: #222831;
     text-transform: uppercase;
     text-decoration: none;
+    background-image: linear-gradient(currentColor, currentColor);
+    background-position: 0% 100%;
+    background-repeat: no-repeat;
+    background-size: 0% 2px;
+    transition: background-size .3s;
+    padding-bottom: 4px;
+}
+.main-menu__link:hover, a.main-menu__link:focus {
+    background-size: 100% 2px;
 }
 
 /*---------------- FIN NAV ----------------*/
@@ -137,10 +146,11 @@ img {
 /* -------------- FOOTER ------------------*/
 
 .footer {
-    margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 0.1fr);
+    padding: 16px;
+    background-color: grey
 }
 
 
@@ -149,7 +159,6 @@ img {
 .footer .sec,
 .footer .cont,
 .footer .redes {
-    background: grey;
     text-align: center;
 }
 
@@ -162,11 +171,17 @@ img {
     grid-column-start: 1;
     grid-column-end: -1;
     color: #85D8DC;
-    font-size: 30px;
+}
+
+.footer .slogan h3 {
+    font-size: 3rem;
+    margin: 16px 0;
 }
 
 .titulo {
     font-size: 20px;
+    padding: 10px 0;
+    color: white;
 }
 
 .footer .sec ul {
@@ -187,7 +202,7 @@ img {
 .footer .cont .items {
     font-size: 20px;
     padding-bottom: 10px;
-    ;
+    color: var(--texto);
 }
 
 .footer .redes .iconos {
@@ -219,6 +234,7 @@ img {
 
     .titulo {
         font-size: 25px;
+        padding: 10px 0;
     }
 
     .footer .sec ul {
