Añade nav y footer

--- a/styles/inicio.css
+++ b/styles/inicio.css
@@ -65,6 +65,7 @@
 .introduction__paragraph {
     max-width: 650px;
     margin-bottom: 32px;
+    color: white;
 }
 
 .introduction__paragraph--name {
