--- a/styles/inicio.css
+++ b/styles/inicio.css
@@ -304,6 +304,79 @@
     font-weight: bold;
 }
 
+/* QUINTA SECCIÓN: BENEFICIOS DE INCORPORAR IA EN LA VIDA COTIDIANA */
+
+.benefits {
+    display: grid; 
+    grid-template-rows: 1fr 465px;
+    grid-template-columns: 1fr 1fr;
+    gap: 32px;
+    padding: 16px 32px;
+    background: #f5f5f5;
+}
+   
+.benefits-content {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-row-end: 2;
+}
+
+.benefits-image {
+    grid-row-start: 1;
+    grid-column-start: 2;
+    grid-row-end: 2;
+    background: url('../assets/img/chip-ia.jpg') no-repeat left;
+}  
+ 
+.benefits-video { 
+    grid-row-start: 2;
+    grid-column-start: 1;
+    grid-column-end: 3;
+ }
+
+.benefits__title {
+    font-family: var(--title-playfair);
+    font-size: 2.8rem;
+    font-style: italic;
+    font-weight: normal;
+    margin: 16px 0;
+}
+
+.benefit-item__title-container {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    border-bottom: 1px solid var(--gris-claro);
+    padding: 8px 0;
+}
+
+.benefit-item__icon {
+    height: 28px;
+    width: 28px;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.benefit-item__icon.automation {
+    background-image: url('../assets/icons/automatizacion.svg');
+}
+.benefit-item__icon.energy {
+    background-image: url('../assets/icons/energia.svg');
+}
+.benefit-item__icon.learning {
+    background-image: url('../assets/icons/aprendizaje.svg');
+}
+
+.benefit-item__title {
+    font-weight: bold;
+    font-size: 1.8rem;
+}
+
+.benefit-item__description {
+    padding: 8px 0;
+}
+
+
 
 @media screen and (max-width: 768px) {
     .introduction {
@@ -316,6 +389,16 @@
 
     .about {
         margin-top: 24px;
+    }
+
+    .benefits-image {
+        display: none;
+    }
+
+    .benefits-content {
+        grid-row-start: 1;
+        grid-column-start: 1;
+        grid-column-end: 3;
     }
 }
 
