--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -43,7 +43,7 @@ body{
     background-position: center center;
 }
 
-.col-md-7 {
+.col-md-7.c-lateral-derecho {
     padding: 16px;
 }
 
@@ -103,9 +103,21 @@ button.hover {
     background: #3371B6;
 }
 
+nav a:hover, footer a:hover {
+    color: currentColor;
+}
+
+footer a:hover {
+    color: white;
+}
+
 .bi-telephone, .bi-envelope {
     display: initial;
     padding-left: 0;
+}
+
+.c-lateral-izquierdo div.d-flex {
+    justify-content: center;
 }
 
 @media screen and (max-width: 768px) {
