--- a/styles/quienes_somos.css
+++ b/styles/quienes_somos.css
@@ -1,8 +1,3 @@
-img {
-    width: 40%;
-    height: auto;
-}
-
 .introduction {
     background-color: var(--gris-oscuro);
     padding: 60px 120px 50px;
@@ -30,88 +25,6 @@ img {
     width: 240px;
     display: grid;
     justify-self: center;
-}
-
-
-.introduction__button-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 32px;
-}
-
-.introduction-btn {
-    font-size: 1.8rem;
-    text-decoration: none;
-    color: white;
-    border: 1px solid var(--turquesa-intenso);
-    border-radius: 8px;
-    display: inline-block;
-    position: relative;
-    background: transparent;
-    padding: 16px 24px;
-    z-index: 1;
-    overflow: hidden;
-    transition: 0.5s;
-    width: fit-content;
-    height: fit-content;
-    text-align: center;
-}
-
-
-.scrolling-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 16px;
-}
-
-.mouse-container {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    top: -18px;
-}
-
-.mouse {
-    width: 29px;
-    height: 48px;
-    border: 3px solid var(--turquesa-opaco);
-    border-radius: 60px;
-    background: linear-gradient(180deg, rgba(0, 173, 181, 0.72) 0%, rgba(0, 173, 181, 0.00) 100%);
-}
-
-.mouse::before {
-    content: '';
-    width: 9px;
-    height: 9px;
-    position: absolute;
-    top: 30px;
-    background-color: var(--relieve);   
-    left: 50%;
-    transform: translateX(-50%);
-    border-radius: 50%;
-    opacity: 1;
-    animation: mouse 1.8s infinite;
-}
-
-@keyframes mouse {
-    from {
-        opacity: 1;
-        top: 15px;
-    }
-    to {
-        opacity: 0;
-        top: 32px;
-    }
-}
-
-.scrolling-caption {
-    color: var(--texto-secundario);
-    font-size: 1.5rem;
-    position: relative;
-    top: -11px;
-    font-style: italic;
 }
 
 .about__logo {
@@ -147,13 +60,6 @@ h3 {
     margin: 20px 0 10px;
 }
 
-/* .mi-vi {
-    display: grid;
-    grid-template-columns: auto auto;
-    text-align: center;
-    column-gap: 50px;
-} */
-
 td {
     border: 0 none;
     text-align: center;
@@ -164,3 +70,81 @@ h1, h3 {
     text-transform: uppercase;
 }
 
+#mi-vi {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+    column-gap: 50px;
+}
+
+#mision,
+#vision {
+    flex: 1;
+    margin: 10px;
+    text-align: center;
+}
+
+#mi-vi img {
+    min-width: 200px;
+    max-width: 80%;
+    height: auto;
+}
+
+
+.person-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.person-card {
+    max-width: 300px;
+    margin: 10px;
+    padding: 20px;
+    text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+.person-name {
+    font-size: 18px;
+    margin: 10px 0;
+}
+
+.highlight {
+    font-size: 24px;
+    font-weight: bold;
+    color: #007acc; /* Puedes cambiar el color a tu preferencia */
+}
+
+.social-icons {
+    list-style: none;
+    padding: 0;
+}
+
+.social-icons li {
+    display: inline;
+    margin: 5px;
+}
+
+.slogan {
+    font-size: 16px;
+    margin: 10px 0;
+}
+
+hobbies, .soft-skills {
+    font-size: 14px;
+    margin: 5px 0;
+}
+
+
+@media (max-width: 768px) {
+    #mi-vi {
+        flex-direction: column;
+    }
+}
