--- a/styles/quienes_somos.css
+++ b/styles/quienes_somos.css
@@ -27,15 +27,10 @@
     justify-self: center;
 }
 
-.about__logo {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
 .somos-nosotros {
     background-color: snow;
     margin: 30px;
+    padding: 32px 16px;
 }
 
 .nos {
@@ -48,11 +43,6 @@
 h3 {
     font-size: x-large;
     font-weight: 400;
-}
-
-.about__logo-container {
-    width: auto;
-    height: 88px;
 }
 
 .mision, .vision {
@@ -87,6 +77,7 @@ h1, h3 {
     min-width: 200px;
     max-width: 60%;
     height: auto;
+    border: 8px double var(--turquesa-opaco);
 }
 
 .container {
@@ -124,6 +115,10 @@ p {
 
 .story-image:hover {
     opacity: 0.3;
+}
+
+.cada-uno {
+    margin-bottom: 30px;
 }
 
 .person-cards {
