--- a/styles/quienes_somos.css
+++ b/styles/quienes_somos.css
@@ -154,13 +154,23 @@ img {
 
 .social-icons {
     list-style: none;
-    padding: 0;
+    padding: 0 0 10px 0;
 }
 
 .social-icons li {
     display: inline;
     margin: 5px;
 }
+
+.social-icons li i {
+    color: #292929;;
+}
+
+.social-icons li i:hover {
+    transform: scale(2);
+    transition: 1.5s;
+}
+
 
 .slogan {
     font-size: 16px;
