--- a/styles/lista_productos.css
+++ b/styles/lista_productos.css
@@ -30,6 +30,7 @@
     object-fit: cover;
     border-radius: 8px;
     transition: transform 0.3s; 
+    background-color: transparent;
 }
 
 .product-card__img-container:hover .product-card__img {
@@ -46,6 +47,7 @@
     font-size: 1.8rem;
     font-weight: bold;
     padding: 4px 0;
+    text-transform:capitalize;
     /* overflow: hidden;
     text-overflow: ellipsis; */
 }
