--- a/styles/inicio.css
+++ b/styles/inicio.css
@@ -255,7 +255,7 @@
     flex-wrap: wrap;
     gap: 20px 60px;
     opacity: 50%;
-    margin: 35px 0;
+    margin: 35px 16px;
     padding: 30px 0;
     border-top: 2px solid var(--gris-claro);
     border-bottom: 2px solid var(--gris-claro);
