--- a/styles/quienes_somos.css
+++ b/styles/quienes_somos.css
@@ -136,9 +136,16 @@ p {
     border-radius: 5px;
 }
 
+.person-card__img-container {
+    width: 250px;
+    height: 250px;
+    overflow: hidden; 
+}
+
 img {
     max-width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
 }
 
 .person-name {
@@ -159,7 +166,8 @@ img {
 
 .social-icons li {
     display: inline;
-    margin: 5px;
+    font-size: 2.2rem;
+    margin: 0 24px;
 }
 
 .social-icons li i {
