--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,8 @@
+{% extends "base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'styles/style.css' %}">
-</head>
-<body>
+
+{% block styles %}<link rel="stylesheet" href="{% static 'css/inicio.css' %}">{% endblock styles %}
+
+{% block content %}
     <h1>Hola mundo</h1>
-</body>
-</html>
+{% endblock content %}
