--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %} 
+{% load static %} <!-- Carga de archivos estáticos -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
-    {% block styles %}{% endblock %} <!--EJ. <link rel="stylesheet" href="{% static 'css/inicio.css' %}">-->
+    {% block styles %}{% endblock %} <!--EJ. <link rel="stylesheet" href="{% static 'styles/inicio.css' %}">-->
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Playfair+Display:wght@400;500;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="shortcut icon" href="{% static 'images/fav.ico' %}" type="image/x-icon">
@@ -29,12 +29,13 @@
 
     <main>
         {% block content %}
-              <!-- ... Estructura aquí ... -->
+            <!-- ... Estructura aquí ... -->
         {% endblock content %}
     </main>
 
     {% include "components/footer.html" %}    
 
-    <script src="js/main.js"></script>
+    <script src="{% static 'js/main.js' %}"></script>
+    <script src="https://kit.fontawesome.com/534658d6ab.js" crossorigin="anonymous"></script>
 </body>
 </html>
